--- a/src/componant/Details/style.css
+++ b/src/componant/Details/style.css
@@ -34,7 +34,7 @@ background: #DFC2F2;
   display: inline-block;
   position: relative;
   font-size: 30px;
-  color: #344055;
+  color: #0c121d;
   margin: 0;
 }
 
@@ -50,7 +50,7 @@ background: #DFC2F2;
   border-radius: 5px;
   font-size: 14px;
   padding: 5px;
-  color: white;
+  color: rgb(37, 35, 35);
   margin: 0;
   animation: chan-sh 6s ease infinite;
 }
@@ -193,3 +193,6 @@ background: #DFC2F2;
 }
 
 
+.modal-titles{
+  color: #333;
+}
